# x8k

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gcc_arm.cmake  m480_hal.cmake  macros.cmake
config/jlink/: flash_debug.jlink
src/: CMakeLists.txt  macros.hpp  main.cpp  retarget.cpp  uart_init.c  uart_init.h
src/drivers/: CMakeLists.txt  drivers.cpp  drivers.h  util_macros.h
src/drivers/architecture/: clock.cpp  clock.h
src/drivers/communication/gpio/: gpio_pin.cpp  gpio_pin.h
src/drivers/communication/sensors/: paw3395.h
src/drivers/communication/serial/: fsusb.cpp  fsusb.h  hid.h  hsusb.cpp  hsusb.h  hsusbd_descriptors.c  iusb.h  spi.cpp  spi.h  uart.cpp  uart.h  usb.cpp  usb.h  usbd_descriptors.c
src/drivers/communication/serial/usb/: hsusb.cpp  hsusb.h
src/sys/: CMakeLists.txt  descriptors.c  hid_mouse.c  hid_mouse.h  retarget.c  sys_init.c  sys_init.h  uart_init.c  uart_init.h
